add PostDTO, separation of service and repository logic