@@ -1,6 +1,5 @@
 package org.repository;
 
-import org.exception.NotFoundException;
 import org.model.Post;
 import org.springframework.stereotype.Repository;
 
@@ -10,7 +9,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Repository
 public class PostRepository {
@@ -18,30 +16,20 @@ public class PostRepository {
     private final AtomicLong idCounter = new AtomicLong(0);
 
 
-    public List<Post> all() {
+    public List<Post> findAll() {
         if (posts.isEmpty()) {
             return Collections.emptyList();
         }
         return posts.values().stream()
-                .filter(post -> !post.isRemoved())
                 .map(Post::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Optional<Post> getById(long id) {
-        checkId(id);
-        if (posts.isEmpty()) {
-            throw new NotFoundException();
-        } else
-            return Optional.ofNullable(posts.get(id))
-                    .filter(p -> !p.isRemoved());
+    public Optional<Post> findById(long id) {
+        return Optional.ofNullable(posts.get(id)).map(Post::new);
     }
 
     public Post save(Post post) {
-        if (post == null) {
-            throw new IllegalArgumentException("Post cannot be null");
-        }
-        // CREATE
         if (post.getId() == 0) {
             long newId = idCounter.incrementAndGet();
             Post newPost = new Post(post);
@@ -49,27 +37,7 @@ public class PostRepository {
             posts.put(newId, newPost);
             return newPost;
         }
-        // UPDATE
-        Post stored = posts.get(post.getId());
-        if (stored == null || stored.isRemoved()) {
-            throw new NotFoundException();
-        }
         posts.put(post.getId(), new Post(post));
         return post;
-    }
-
-    public void removeById(long id) {
-        checkId(id);
-        Post stored = posts.get(id);
-        if (stored == null || stored.isRemoved()) {
-            throw new NotFoundException();
-        }
-        stored.setRemoved(true);
-    }
-
-    private void checkId(Long id) {
-        if (id <= 0) {
-            throw new IllegalArgumentException("ID must be positive");
-        }
     }
 }
